--- a/src/main/resources/com/collegegroup/processscheduling/FCFS_SJF.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/FCFS_SJF.fxml
@@ -1,43 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" nodeOrientation="LEFT_TO_RIGHT" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.StaticControllers.FCFS_SJFController">
-   <VBox layoutX="26.0" layoutY="19.0" prefHeight="600.0" prefWidth="800.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <Label prefHeight="27.0" prefWidth="743.0" text="Process List">
+<BorderPane maxHeight="1000.0" maxWidth="1000.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="1000.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.StaticControllers.FCFS_SJFController">
+   <center>
+      <BorderPane prefHeight="358.0" prefWidth="408.0" BorderPane.alignment="CENTER">
+         <center>
+            <TableView fx:id="tableView" prefHeight="379.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+              <columns>
+                <TableColumn fx:id="pidColumn" prefWidth="173.0" text="PID" />
+                <TableColumn fx:id="burstColumn" prefWidth="227.0" text="Burst Time" />
+                  <TableColumn fx:id="arrivalTimeColumn" prefWidth="199.0" text="Arrival Time" />
+              </columns>
+               <BorderPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </BorderPane.margin>
+            </TableView>
+         </center>
+         <bottom>
+            <VBox prefHeight="94.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="50.0" prefWidth="600.0" spacing="30.0">
+                     <children>
+                        <TextField fx:id="pidTextField" promptText="PID" />
+                        <TextField fx:id="burstTextField" promptText="Burst Time" />
+                        <TextField fx:id="arrivalTimeTextField" alignment="CENTER" promptText="Arrival Time" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="26.0" prefWidth="408.0" spacing="30.0">
+      
+      
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#insertButtonPushed" text="Insert" />
+                        <Button mnemonicParsing="false" onAction="#deleteButtonPushed" text="Delete" />
+                        <Button mnemonicParsing="false" onAction="#onDrawClick" text="Draw Gantt Chart" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </bottom>
+      </BorderPane>
+   </center>
+   <top>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Process List" textAlignment="CENTER" wrappingWidth="599.53515625" BorderPane.alignment="CENTER">
          <font>
-            <Font name="System Bold Italic" size="18.0" />
+            <Font size="20.0" />
          </font>
-      </Label>
-
-      <TableView fx:id="tableView" prefHeight="250.0" prefWidth="290.0">
-         <columns>
-            <TableColumn fx:id="pidColumn" prefWidth="120.0" text="PID" />
-            <TableColumn fx:id="burstColumn" prefWidth="154.0" text="Burst Time" />
-            <TableColumn fx:id="arrivalTimeColumn" prefWidth="91.0" text="Arrival Time" />
-         </columns>
-      </TableView>
-
-      <HBox alignment="CENTER" spacing="10.0">
-         <TextField fx:id="pidTextField" prefHeight="25.0" prefWidth="153.0" promptText="PID" />
-         <TextField fx:id="burstTextField" promptText="Burst Time" />
-         <TextField fx:id="arrivalTimeTextField" promptText="Arrival Time" />
-      </HBox>
-      <AnchorPane>
-         <children>
-            <Button layoutX="267.0" layoutY="22.0" mnemonicParsing="false" onAction="#insertButtonPushed" text="Insert" />
-            <Button layoutX="420.0" layoutY="22.0" mnemonicParsing="false" onAction="#deleteButtonPushed" text="Delete" />
-            <Button layoutX="338.0" layoutY="70.0" mnemonicParsing="false" onAction="#onDrawClick" text="Draw Gantt Chart" />
-         </children>
-      </AnchorPane>
-      <HBox fx:id="hbox" />
-   </VBox>
-</AnchorPane>
+      </Text>
+   </top>
+   <bottom>
+      <FlowPane fx:id="hbox" columnHalignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWrapLength="0.0" />
+   </bottom>
+</BorderPane>
