--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/FCFS_SJF.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/FCFS_SJF.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane nodeOrientation="LEFT_TO_RIGHT" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.StaticControllers.FCFSController">
+<BorderPane nodeOrientation="LEFT_TO_RIGHT" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.FCFSController">
    <center>
       <BorderPane prefHeight="358.0" prefWidth="408.0" BorderPane.alignment="CENTER">
          <center>
