--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/GanttChart.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/GanttChart.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="463.0" prefWidth="1047.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.StaticControllers.GanttChart">
+<AnchorPane prefHeight="463.0" prefWidth="1047.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.GanttChartController">
    <children>
       <Text layoutX="423.0" layoutY="50.0" nodeOrientation="LEFT_TO_RIGHT" strokeType="OUTSIDE" strokeWidth="0.0" text="Gantt Chart">
          <font>
