--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/RoundRobin.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/RoundRobin.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" nodeOrientation="LEFT_TO_RIGHT" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.StaticControllers.PriorityController">
-    <VBox layoutX="26.0" layoutY="19.0" prefHeight="600.0" prefWidth="800.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <Label prefHeight="27.0" prefWidth="743.0" text="Process List">
+<AnchorPane id="AnchorPane" nodeOrientation="LEFT_TO_RIGHT" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.RoundRobinController">
+    <VBox prefHeight="600.0" prefWidth="800.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Label prefHeight="27.0" prefWidth="101.0" text="Process List">
             <font>
                 <Font name="System Bold Italic" size="18.0" />
             </font>
@@ -23,7 +23,6 @@
                 <TableColumn fx:id="pidColumn" prefWidth="120.0" text="PID" />
                 <TableColumn fx:id="burstColumn" prefWidth="154.0" text="Burst Time" />
                 <TableColumn fx:id="arrivalTimeColumn" prefWidth="91.0" text="Arrival Time" />
-            <TableColumn fx:id="priorityColumn" prefWidth="137.0" text="Priority" />
             </columns>
         </TableView>
 
@@ -31,15 +30,14 @@
             <TextField fx:id="pidTextField" prefHeight="25.0" prefWidth="153.0" promptText="PID" />
             <TextField fx:id="burstTextField" promptText="Burst Time" />
             <TextField fx:id="arrivalTimeTextField" promptText="Arrival Time" />
-         <TextField fx:id="priorityTextField" promptText="Priority" />
         </HBox>
         <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <Button layoutX="287.0" layoutY="66.0" mnemonicParsing="false" onAction="#insertButtonPushed"
-                    prefHeight="54.0" prefWidth="80.0" text="Insert"/>
-            <Button layoutX="400.0" layoutY="66.0" mnemonicParsing="false" onAction="#deleteButtonPushed"
-                    prefHeight="54.0" prefWidth="92.0" text="Delete"/>
-            <Button layoutX="338.0" layoutY="132.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="108.0"
-                    text="Draw Gantt Chart"/>
+            <children>
+                <Button layoutX="287.0" layoutY="66.0" mnemonicParsing="false" onAction="#insertButtonPushed" prefHeight="54.0" prefWidth="80.0" text="Insert" />
+                <Button layoutX="400.0" layoutY="66.0" mnemonicParsing="false" onAction="#deleteButtonPushed" prefHeight="54.0" prefWidth="92.0" text="Delete" />
+                <Button layoutX="338.0" layoutY="132.0" mnemonicParsing="false" onAction="#drawButtonPushed" prefHeight="54.0" prefWidth="108.0" text="Draw Gantt Chart" />
+            <TextField fx:id="quantumTextField" layoutX="318.0" layoutY="29.0" promptText="Time Quantum" />
+            </children>
         </AnchorPane>
     </VBox>
 </AnchorPane>
