--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/Scene2.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/Scene2.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.Scene2Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.Scene2Controller">
    <children>
       <Label layoutX="96.0" layoutY="54.0" prefHeight="49.0" prefWidth="166.0" text="Scheduler type">
          <font>
