--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/RoundRobin.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/RoundRobin.fxml
@@ -6,38 +6,27 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" nodeOrientation="LEFT_TO_RIGHT" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.RoundRobinController">
-    <VBox prefHeight="600.0" prefWidth="800.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <Label prefHeight="27.0" prefWidth="101.0" text="Process List">
-            <font>
-                <Font name="System Bold Italic" size="18.0" />
-            </font>
-        </Label>
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.RoundRobinController">
+     <Label layoutX="334.0" layoutY="21.0" prefHeight="27.0" prefWidth="101.0" text="Process List">
+         <font>
+             <Font name="System Bold Italic" size="18.0" />
+         </font>
+     </Label>
 
-        <TableView fx:id="tableView" prefHeight="250.0" prefWidth="290.0">
-            <columns>
-                <TableColumn fx:id="pidColumn" prefWidth="120.0" text="PID" />
-                <TableColumn fx:id="burstColumn" prefWidth="154.0" text="Burst Time" />
-                <TableColumn fx:id="arrivalTimeColumn" prefWidth="91.0" text="Arrival Time" />
-            </columns>
-        </TableView>
-
-        <HBox alignment="CENTER" spacing="10.0">
-            <TextField fx:id="pidTextField" prefHeight="25.0" prefWidth="153.0" promptText="PID" />
-            <TextField fx:id="burstTextField" promptText="Burst Time" />
-            <TextField fx:id="arrivalTimeTextField" promptText="Arrival Time" />
-        </HBox>
-        <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <children>
-                <Button layoutX="287.0" layoutY="66.0" mnemonicParsing="false" onAction="#insertButtonPushed" prefHeight="54.0" prefWidth="80.0" text="Insert" />
-                <Button layoutX="400.0" layoutY="66.0" mnemonicParsing="false" onAction="#deleteButtonPushed" prefHeight="54.0" prefWidth="92.0" text="Delete" />
-                <Button layoutX="338.0" layoutY="132.0" mnemonicParsing="false" onAction="#drawButtonPushed" prefHeight="54.0" prefWidth="108.0" text="Draw Gantt Chart" />
-            <TextField fx:id="quantumTextField" layoutX="318.0" layoutY="29.0" promptText="Time Quantum" />
-            </children>
-        </AnchorPane>
-    </VBox>
+     <TableView fx:id="tableView" layoutX="199.0" layoutY="64.0" prefHeight="250.0" prefWidth="370.0">
+         <columns>
+             <TableColumn fx:id="pidColumn" prefWidth="120.0" text="PID" />
+             <TableColumn fx:id="burstColumn" prefWidth="154.0" text="Burst Time" />
+             <TableColumn fx:id="arrivalTimeColumn" prefWidth="91.0" text="Arrival Time" />
+         </columns>
+     </TableView>
+      <TextField fx:id="pidTextField" layoutX="101.0" layoutY="372.0" prefHeight="25.0" prefWidth="153.0" promptText="PID" />
+      <TextField fx:id="burstTextField" layoutX="334.0" layoutY="372.0" promptText="Burst Time" />
+      <TextField fx:id="arrivalTimeTextField" layoutX="541.0" layoutY="372.0" promptText="Arrival Time" />
+       <Button layoutX="172.0" layoutY="493.0" mnemonicParsing="false" onAction="#insertButtonPushed" prefHeight="33.0" prefWidth="80.0" text="Insert" />
+       <Button layoutX="569.0" layoutY="490.0" mnemonicParsing="false" onAction="#deleteButtonPushed" prefHeight="39.0" prefWidth="92.0" text="Delete" />
+       <Button layoutX="354.0" layoutY="490.0" mnemonicParsing="false" onAction="#drawButtonPushed" prefHeight="39.0" prefWidth="108.0" text="Draw Gantt Chart" />
+   <TextField fx:id="quantumTextField" layoutX="334.0" layoutY="440.0" promptText="Time Quantum" />
 </AnchorPane>
