--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/Scene1.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/Scene1.fxml
@@ -2,25 +2,38 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.Scene1Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.Scene1Controller">
    <children>
-      <Label layoutX="226.0" layoutY="39.0" prefHeight="38.0" prefWidth="148.0" text="Choose mode">
+      <Label layoutX="135.0" layoutY="36.0" prefHeight="76.0" prefWidth="576.0" text="Process sceduling visualization using Gantt Chart">
          <font>
-            <Font size="24.0" />
+            <Font name="Open Sans SemiCondensed ExtraBold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="226.0" layoutY="186.0" mnemonicParsing="false" onAction="#onStaticClick" prefHeight="55.0" prefWidth="148.0" text="Static mode">
+      <Button layoutX="335.0" layoutY="427.0" mnemonicParsing="false" onAction="#onStaticClick" prefHeight="30.0" prefWidth="148.0" text="Static mode">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="226.0" layoutY="272.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="148.0" text="Dynamic mode">
+      <Button layoutX="335.0" layoutY="479.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="148.0" text="Live mode">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
+      <Text layoutX="304.0" layoutY="409.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select mode of operation" wrappingWidth="210.876953125">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <ImageView fitHeight="229.0" fitWidth="277.0" layoutX="286.0" layoutY="126.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Scene1Pic.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
