--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/Scene2.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/Scene2.fxml
@@ -2,29 +2,29 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.Scene2Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.Scene2Controller">
    <children>
-      <Label layoutX="96.0" layoutY="54.0" prefHeight="49.0" prefWidth="166.0" text="Scheduler type">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <ChoiceBox fx:id="choiceBox" layoutX="306.0" layoutY="62.0" prefHeight="34.0" prefWidth="187.0" />
-      <Label layoutX="96.0" layoutY="124.0" prefHeight="49.0" prefWidth="221.0" text="Number of processes">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <TextField fx:id="textField" layoutX="336.0" layoutY="136.0" />
-      <Button layoutX="242.0" layoutY="247.0" mnemonicParsing="false" onAction="#onGo" prefHeight="49.0" prefWidth="117.0" text="Go">
+      <ChoiceBox fx:id="choiceBox" layoutX="318.0" layoutY="112.0" prefHeight="26.0" prefWidth="176.0" />
+      <Button layoutX="372.0" layoutY="487.0" mnemonicParsing="false" onAction="#onGo" prefHeight="44.0" prefWidth="57.0" text="Go">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
+      <Text layoutX="241.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select a scheduling algorithm" wrappingWidth="318.44140625">
+         <font>
+            <Font name="Open Sans SemiCondensed ExtraBold" size="23.0" />
+         </font>
+      </Text>
+      <ImageView fitHeight="308.0" fitWidth="337.0" layoutX="246.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Scene2Pic.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
