--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/LiveGanttChart.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/LiveGanttChart.fxml
@@ -11,49 +11,54 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="823.0" prefWidth="1178.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.LiveGanttChartController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="700.0" prefWidth="1286.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.LiveGanttChartController">
    <children>
-      <Text layoutX="441.0" layoutY="72.0" nodeOrientation="LEFT_TO_RIGHT" strokeType="OUTSIDE" strokeWidth="0.0" text="Live Gantt Chart">
+      <Text layoutX="508.0" layoutY="40.0" nodeOrientation="LEFT_TO_RIGHT" strokeType="OUTSIDE" strokeWidth="0.0" text="Live Gantt Chart">
          <font>
             <Font name="Arial Black" size="33.0" />
          </font>
       </Text>
-      <Button alignment="CENTER" layoutX="314.0" layoutY="560.0" mnemonicParsing="false" onAction="#onClickDraw" prefHeight="37.0" prefWidth="65.0" text="Draw" textOverrun="WORD_ELLIPSIS" />
-      <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="30.0" layoutY="168.0" nodeOrientation="LEFT_TO_RIGHT" pannable="true" prefHeight="207.0" prefWidth="727.0" AnchorPane.bottomAnchor="448.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="421.0" AnchorPane.topAnchor="168.0">
+      <Button alignment="CENTER" layoutX="635.0" layoutY="603.0" mnemonicParsing="false" onAction="#onClickDraw" prefHeight="47.0" prefWidth="119.0" text="Draw" textOverrun="WORD_ELLIPSIS" />
+      <ScrollPane layoutX="157.0" layoutY="96.0" nodeOrientation="LEFT_TO_RIGHT" pannable="true" prefHeight="136.0" prefWidth="955.0" AnchorPane.bottomAnchor="468.0" AnchorPane.leftAnchor="157.0" AnchorPane.rightAnchor="174.0" AnchorPane.topAnchor="96.0">
          <padding>
             <Insets left="20.0" right="20.0" top="20.0" />
          </padding>
          <content>
-            <HBox fx:id="hbox" nodeOrientation="LEFT_TO_RIGHT" prefHeight="191.0" prefWidth="687.0">
-               <padding>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </padding>
-            </HBox>
+            <HBox fx:id="hbox" prefHeight="93.0" prefWidth="1093.0" />
          </content>
       </ScrollPane>
-      <TableView fx:id="tableView" layoutX="800.0" layoutY="168.0" prefHeight="283.0" prefWidth="344.0">
+      <TableView fx:id="tableView" layoutX="234.0" layoutY="286.0" prefHeight="283.0" prefWidth="344.0">
         <columns>
-          <TableColumn fx:id="pidColumn" prefWidth="34.0" text="PID" />
+          <TableColumn fx:id="pidColumn" prefWidth="50.0" text="PID" />
           <TableColumn fx:id="burstColumn" prefWidth="139.0" text="Remaining Burst time" />
             <TableColumn fx:id="arrivalTimeColumn" prefWidth="77.0" text="Arrival time" />
             <TableColumn fx:id="priorityColumn" prefWidth="81.0" text="Priority" />
         </columns>
       </TableView>
-      <Button layoutX="917.0" layoutY="629.0" mnemonicParsing="false" onAction="#insertButtonPushed" text="Insert" />
-      <Button layoutX="986.0" layoutY="629.0" mnemonicParsing="false" onAction="#deleteButtonPushed" text="Delete" />
-      <TextField fx:id="pidTextField" layoutX="903.0" layoutY="467.0" promptText="PID" />
-      <TextField fx:id="burstTextField" layoutX="903.0" layoutY="501.0" promptText="Burst Time" />
-      <TextField fx:id="arrivalTimeTextField" layoutX="902.0" layoutY="539.0" promptText="Arrival Time" />
-      <Text layoutX="357.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Live Feed" />
-      <Text layoutX="936.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Process Table" wrappingWidth="72.13671875" />
-      <Text layoutX="291.0" layoutY="644.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time:" />
-      <Text fx:id="currentTimeText" layoutX="330.0" layoutY="644.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
-      <Text layoutX="360.0" layoutY="644.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seconds" />
-      <Text layoutX="201.0" layoutY="673.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Average Waiting Time:" />
-      <Text fx:id="avgWaitingTimeText" layoutX="329.0" layoutY="673.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
-      <Text layoutX="359.0" layoutY="673.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seconds" />
-      <Text layoutX="179.0" layoutY="702.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Average Turnaround Time:" />
-      <Text fx:id="avgTurnAroundText" layoutX="329.0" layoutY="702.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
-      <Text layoutX="359.0" layoutY="702.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seconds" />
+      <Button layoutX="68.0" layoutY="474.0" mnemonicParsing="false" onAction="#insertButtonPushed" text="Insert" />
+      <Button layoutX="166.0" layoutY="474.0" mnemonicParsing="false" onAction="#deleteButtonPushed" text="Delete" />
+      <TextField fx:id="pidTextField" layoutX="68.0" layoutY="305.0" promptText="PID" />
+      <TextField fx:id="burstTextField" layoutX="68.0" layoutY="350.0" promptText="Burst Time" />
+      <TextField fx:id="arrivalTimeTextField" layoutX="68.0" layoutY="403.0" promptText="Arrival Time" />
+      <Text layoutX="628.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Live Feed" />
+      <Text layoutX="367.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Process Table" wrappingWidth="77.3525390625" />
+      <Text layoutX="337.0" layoutY="622.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time:" />
+      <Text fx:id="currentTimeText" layoutX="439.0" layoutY="622.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
+      <Text layoutX="469.0" layoutY="622.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seconds" />
+      <Text layoutX="281.0" layoutY="639.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Average Waiting Time:" />
+      <Text fx:id="avgWaitingTimeText" layoutX="439.0" layoutY="639.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
+      <Text layoutX="469.0" layoutY="639.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seconds" />
+      <Text layoutX="281.0" layoutY="657.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Average Turnaround Time:" />
+      <Text fx:id="avgTurnAroundText" layoutX="439.0" layoutY="657.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
+      <Text layoutX="469.0" layoutY="657.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seconds" />
+      <Text layoutX="923.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Finished processes" wrappingWidth="103.13671875" />
+      <TableView fx:id="tableView2" layoutX="803.0" layoutY="286.0" prefHeight="283.0" prefWidth="344.0">
+         <columns>
+            <TableColumn fx:id="pidColumn2" prefWidth="81.0" text="PID" />
+            <TableColumn fx:id="arrivalTimeColumn2" prefWidth="87.0" text="Arrival time" />
+            <TableColumn fx:id="startTimeColumn1" prefWidth="87.0" text="Start time" />
+            <TableColumn fx:id="endTimeColumn1" prefWidth="87.0" text="End time" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
