--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/GanttChart.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/GanttChart.fxml
@@ -10,27 +10,27 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.GanttChartController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="739.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.collegegroup.processscheduling.GUIControllers.GanttChartController">
    <children>
-      <Text layoutX="268.0" layoutY="75.0" nodeOrientation="LEFT_TO_RIGHT" strokeType="OUTSIDE" strokeWidth="0.0" text="Static Gantt Chart">
+      <Text layoutX="410.0" layoutY="66.0" nodeOrientation="LEFT_TO_RIGHT" strokeType="OUTSIDE" strokeWidth="0.0" text="Static Gantt Chart">
          <font>
             <Font name="Arial Black" size="33.0" />
          </font>
       </Text>
-      <Button alignment="CENTER" layoutX="368.0" layoutY="520.0" mnemonicParsing="false" onAction="#onClickDraw" prefHeight="37.0" prefWidth="65.0" text="Draw" textOverrun="WORD_ELLIPSIS" />
-      <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="29.0" layoutY="145.0" nodeOrientation="LEFT_TO_RIGHT" pannable="true" prefHeight="271.0" prefWidth="475.0" AnchorPane.bottomAnchor="184.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="296.0" AnchorPane.topAnchor="145.0">
+      <Button alignment="CENTER" layoutX="538.0" layoutY="552.0" mnemonicParsing="false" onAction="#onClickDraw" prefHeight="54.0" prefWidth="117.0" text="Draw" textOverrun="WORD_ELLIPSIS" />
+      <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="66.0" layoutY="111.0" nodeOrientation="LEFT_TO_RIGHT" pannable="true" prefHeight="189.0" prefWidth="1096.0" AnchorPane.bottomAnchor="500.0" AnchorPane.leftAnchor="66.0" AnchorPane.rightAnchor="72.0" AnchorPane.topAnchor="111.0">
          <padding>
             <Insets left="20.0" right="20.0" top="20.0" />
          </padding>
          <content>
-            <HBox fx:id="hbox" nodeOrientation="LEFT_TO_RIGHT">
+            <HBox fx:id="hbox" nodeOrientation="LEFT_TO_RIGHT" prefHeight="169.0" prefWidth="988.0">
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </padding>
             </HBox>
          </content>
       </ScrollPane>
-      <TableView fx:id="tableView" layoutX="514.0" layoutY="145.0" prefHeight="271.0" prefWidth="272.0">
+      <TableView fx:id="tableView" layoutX="149.0" layoutY="310.0" prefHeight="271.0" prefWidth="272.0">
         <columns>
           <TableColumn fx:id="pidColumn" prefWidth="45.0" text="PID" />
           <TableColumn fx:id="burstColumn" prefWidth="79.0" text="Burst time" />
@@ -38,5 +38,45 @@
             <TableColumn fx:id="priorityColumn" prefWidth="62.0" text="Priority" />
         </columns>
       </TableView>
+      <Text layoutX="475.0" layoutY="677.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Average Waiting Time:">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Text>
+      <Text fx:id="avgWaitingTimeText" layoutX="671.0" layoutY="677.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Text>
+      <Text layoutX="715.0" layoutY="677.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seconds">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Text>
+      <Text layoutX="446.0" layoutY="719.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Average Turnaround Time:">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Text>
+      <Text fx:id="avgTurnAroundText" layoutX="671.0" layoutY="718.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Text>
+      <Text layoutX="715.0" layoutY="718.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seconds">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Text>
+      <TableView fx:id="tableView2" layoutX="748.0" layoutY="311.0" prefHeight="271.0" prefWidth="272.0">
+         <columns>
+            <TableColumn fx:id="pidColumn2" prefWidth="45.0" text="PID" />
+            <TableColumn fx:id="arrivalTimeColumn2" prefWidth="79.0" text="Arrival time" />
+            <TableColumn fx:id="startTimeColumn1" prefWidth="82.0" text="Start time" />
+            <TableColumn fx:id="endTimeColumn1" prefWidth="62.0" text="End time" />
+         </columns>
+      </TableView>
+      <Text layoutX="247.0" layoutY="291.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Process table" />
+      <Text layoutX="836.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Finished processes" />
    </children>
 </AnchorPane>
