--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/FCFS.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/FCFS.fxml
@@ -30,5 +30,6 @@
          </font>
       </Text>
       <CheckBox fx:id="live" layoutX="488.0" layoutY="594.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="75.0" text="Live" />
+      <Button layoutX="66.0" layoutY="65.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="38.0" text="&lt;" />
    </children>
 </AnchorPane>
