--- a/src/main/resources/com/collegegroup/processscheduling/GUIControllers/LiveGanttChart.fxml
+++ b/src/main/resources/com/collegegroup/processscheduling/GUIControllers/LiveGanttChart.fxml
@@ -18,7 +18,7 @@
             <Font name="Arial Black" size="33.0" />
          </font>
       </Text>
-      <Button alignment="CENTER" layoutX="639.0" layoutY="567.0" mnemonicParsing="false" onAction="#onClickDraw" prefHeight="47.0" prefWidth="119.0" text="Draw" textOverrun="WORD_ELLIPSIS" />
+      <Button alignment="CENTER" layoutX="605.0" layoutY="599.0" mnemonicParsing="false" onAction="#onClickDraw" prefHeight="47.0" prefWidth="103.0" text="Draw" textOverrun="WORD_ELLIPSIS" />
       <ScrollPane layoutX="136.0" layoutY="96.0" nodeOrientation="LEFT_TO_RIGHT" pannable="true" prefHeight="136.0" prefWidth="1068.0" AnchorPane.bottomAnchor="468.0" AnchorPane.leftAnchor="136.0" AnchorPane.rightAnchor="174.0" AnchorPane.topAnchor="96.0">
          <padding>
             <Insets left="20.0" right="20.0" top="20.0" />
@@ -30,7 +30,7 @@
                </padding></HBox>
          </content>
       </ScrollPane>
-      <TableView fx:id="tableView" layoutX="234.0" layoutY="286.0" prefHeight="283.0" prefWidth="344.0">
+      <TableView fx:id="tableView" layoutX="308.0" layoutY="286.0" prefHeight="283.0" prefWidth="344.0">
         <columns>
           <TableColumn fx:id="pidColumn" prefWidth="50.0" text="PID" />
           <TableColumn fx:id="burstColumn" prefWidth="139.0" text="Remaining Burst time" />
@@ -38,13 +38,13 @@
             <TableColumn fx:id="priorityColumn" prefWidth="81.0" text="Priority" />
         </columns>
       </TableView>
-      <Button layoutX="68.0" layoutY="474.0" mnemonicParsing="false" onAction="#insertButtonPushed" text="Insert" />
-      <Button layoutX="166.0" layoutY="474.0" mnemonicParsing="false" onAction="#deleteButtonPushed" text="Delete" />
-      <TextField fx:id="pidTextField" layoutX="68.0" layoutY="305.0" promptText="PID" />
-      <TextField fx:id="burstTextField" layoutX="68.0" layoutY="350.0" promptText="Burst Time" />
-      <TextField fx:id="arrivalTimeTextField" layoutX="68.0" layoutY="403.0" promptText="Arrival Time" />
+      <Button layoutX="68.0" layoutY="523.0" mnemonicParsing="false" onAction="#insertButtonPushed" text="Insert" />
+      <Button layoutX="166.0" layoutY="523.0" mnemonicParsing="false" onAction="#deleteButtonPushed" text="Delete" />
+      <TextField fx:id="pidTextField" layoutX="68.0" layoutY="379.0" promptText="PID" />
+      <TextField fx:id="burstTextField" layoutX="68.0" layoutY="429.0" promptText="Burst Time" />
+      <TextField fx:id="arrivalTimeTextField" layoutX="68.0" layoutY="473.0" promptText="Arrival Time" />
       <Text layoutX="628.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Live Feed" />
-      <Text layoutX="367.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Process Table" wrappingWidth="77.3525390625" />
+      <Text layoutX="441.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Process Table" wrappingWidth="77.3525390625" />
       <Text layoutX="373.0" layoutY="609.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time:">
          <font>
             <Font size="15.0" />
@@ -81,8 +81,8 @@
          <font>
             <Font size="15.0" />
          </font></Text>
-      <Text layoutX="923.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Finished processes" wrappingWidth="103.13671875" />
-      <TableView fx:id="tableView2" layoutX="803.0" layoutY="286.0" prefHeight="283.0" prefWidth="344.0">
+      <Text layoutX="871.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Finished processes" wrappingWidth="103.13671875" />
+      <TableView fx:id="tableView2" layoutX="751.0" layoutY="287.0" prefHeight="283.0" prefWidth="344.0">
          <columns>
             <TableColumn fx:id="pidColumn2" prefWidth="81.0" text="PID" />
             <TableColumn fx:id="arrivalTimeColumn2" prefWidth="87.0" text="Arrival time" />
@@ -91,5 +91,7 @@
          </columns>
       </TableView>
       <Button layoutX="39.0" layoutY="27.0" mnemonicParsing="false" onAction="#back" text="&lt;" />
+      <Button alignment="CENTER" layoutX="753.0" layoutY="599.0" mnemonicParsing="false" onAction="#play" prefHeight="47.0" prefWidth="103.0" text="Play" textOverrun="WORD_ELLIPSIS" />
+      <Button alignment="CENTER" layoutX="887.0" layoutY="599.0" mnemonicParsing="false" onAction="#pause" prefHeight="47.0" prefWidth="103.0" text="Pause" textOverrun="WORD_ELLIPSIS" />
    </children>
 </AnchorPane>
